# dyablog-main

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  manage.py  pyproject.toml  tailwind.config.js
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0001_squashed_0004_remove_blogpost_author_alter_blogpost__author.py  0002_blogpost__author.py  0003_auto_20221011_1931.py  0004_remove_blogpost_author_alter_blogpost__author.py  0005_commentpost.py  0006_alter_commentpost_options_alter_blogpost_body.py
blog/static/blog/: style.css
blog/templates/blog/: base.html  comment_section.html  edit_post.html  login.html  material_text_field.html  navbar.html  post_index.html  view_post.html
docs/: wiki.md
dyablog/: asgi.py  settings.py  urls.py  wsgi.py
