[tool.poetry]
name = "dyablog"
version = "0.1.0"
description = ""
authors = ["0xBA5E64 <26796481+0xBA5E64@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-editorjs-fields = "^0.2.7"
Flake8-pyproject = "^1.1.0.post0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.982"
django-stubs = "^1.12.0"
django-browser-reload = "^1.6.0"

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203"]

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "dyablog.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
